--- a/my_list.html
+++ b/my_list.html
@@ -1,6 +1,6 @@
-"number9dream"
-"The Supernatural Enhancements"
-"Fledgling"
-"Jitterbug Perfume"
-"Sleep Over"
-"Hallucinations"
+<li>"number9dream"</li>
+<li>"The Supernatural Enhancements"</li>
+<li>"Fledgling"</li>
+<li>"Jitterbug Perfume"</li>
+<li>"Sleep Over"</li>
+<li>"Hallucinations"</li>
