Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,4 +1,4 @@
-Some of my favorite books!
+<p>Some of my favorite books!</p>
 <ul>
   <li>"number9dream"</li>
   <li>"The Supernatural Enhancements"</li>
